--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,14 @@
 @tailwind utilities;
 
 @layer components {
+  .text-title-big {
+    font-size: 72px;
+    line-height: 74px;
+  }
+  .text-title-small {
+    font-size: 36px;
+    line-height: 40px;
+  }
   .sidebar-menu-item {
     font-size: 24px;
     font-weight: 700;
